<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_color"
    android:gravity="center"
    tools:context=".ui.fragments.EnterNameFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:layout_marginBottom="48dp"
        android:textColor="@color/white"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:background="@drawable/background_edit_text"
        android:hint="@string/name"/>

    <TextView
        android:id="@+id/bSignName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:elevation="6dp"
        android:background="@drawable/sign_select"
        android:text="@string/done"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>